LPS-127601 Create a new stacking context to avoid deal with the leaflet z-indexes

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -47,6 +47,11 @@ body .ddm-user-view-content {
 		padding: 0 12px;
 	}
 
+	.ddm-geolocation {
+		position: relative;
+		z-index: 0;
+	}
+
 	.liferay-ddm-form-renderer-wizard {
 		padding: 40px 34px 31px;
 	}
